Changelog for GEMC
==================

7/22/16
 - fixed CATCH option for detector factory
 - for cad model, reading cad.gxml for new volume attributes
 - added obj format to CAD support

7/21/16
 - finalized CAD factory
 - added check on file existence for GDML factory

7/20/16
 - added CAD factory - work in progress
 - fixed gdml factory: deleting world pointer after use

7/19/16
 - added comments for future detector mlibrary
 - added material handling in GDML import
 - added GDML import. This is done in two steps:
   1. fill gemc detector map
   2. build the actual volumes
 - added handling of color, visual attributes.
 - added handling of sensitivity
 - handling first daughter so they're seen by the gemc tree

7/18/16
 - fixed NO_FIELD option for individual fields
 - added volume name when material is not found

7/15/16
 - removed gdml material factory. Adding gemc gdml extension "gxml".
 - starting to import gdml files with native G4GDMLParser

7/14/16
 - added additional overlap check line_test if CHECK_OVERLAPS > 3

7/13/16
 - added translation table mechanism from mlibrary: translationTable
 - development version tag: 2.5
 - removed unnecessary randomize function from runWeights

7/7/16
 - Removed CPP obsolete materials: DCgas, FTinsfoam, Noryl, svtwirebond, MMGas, MMMesh, MMMylar, He4_1atm, He4_2atm, He4_3atm,
   He4_7atm, Mn, Cr, Ni, PbWO4, SemiMirror, He3_10amg, BariumOxide, StrontiumOxide, NH3_solid, NH3He, He4_liquid, BerylliumOxide,
   He3, He, Sr, Ox, Pb, Wf, N, Ba
 - Removed CPP obsolete materials:  NEMAG10, Argon, CO2, ArCO2, C6F14, C5F12, H2O, Quartz, Methane, Alumi, Aluminum, Glass,
   Concrete, Copper, Gold, Iron, Lead, LH2, Nickel, Silicium, Silicon, Teflon, Tungsten, Si, C, O, F, H

7/6/16
 - Removed CPP obsolete materials: Air, Aerogel, Air_Opt2, NOMEX, RichAerogel3, RichAerogel5, Chlorine, Deuterium, Carbon, LHe,
   Densimet, Kapton, LgTF1, LeadOxide, LeadTungsten, Glass_GE180, As, W, AluminiumOxide, CalciumOxide, OptScint